# ExperimentsWithAVX

./: .gitignore  CMakeLists.txt
ExperimentsWithAVX_empty/: CMakeLists.txt  ExperimentsWithAVX.sln
ExperimentsWithAVX_empty/Basics/: Basics.vcxproj  Basics.vcxproj.filters  CMakeLists.txt  FusedMultAdd.cpp  multadd.asm
ExperimentsWithAVX_empty/ImageManipulation/: ImageManipulation.cpp  ImageManipulation.h  ImageManipulation.vcxproj  ImageManipulation.vcxproj.filters  MyImageManipulation.cpp  MyImageManipulation.h  TimeTesting.cpp  VisualTesting.cpp
ExperimentsWithAVX_empty/Mandelbrot/: CMakeLists.txt  Mandelbrot.cpp  Mandelbrot.vcxproj
ExperimentsWithAVX_empty/MatrixMultiplication/: CMakeLists.txt  Matrix.hpp  MatrixMultiplication.cpp  MatrixMultiplication.vcxproj  MatrixMultiplication.vcxproj.filters
